--- a/intex.html
+++ b/intex.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test title</title>
+
+    <link rel="stylesheet" href="./css/style.css">
+  
 </head>
-<body>
-    
-    <h1>My first git commit</h1>
-</body>
+  <body>
+    <h1>My third git commit</h1>
+    <header><div class="title">Title</div></header>
+  </body>
 </html>
